WIP trench detection offsets is broken again.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180707 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180707 Trench detection.ipynb
@@ -570,7 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame_rot = skimage.transform.rotate(frame, 3)"
+    "frame_rot = skimage.transform.rotate(frame, -40)"
    ]
   },
   {
@@ -617,346 +617,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag2, \"label_1.find_trench_ends\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Line drawing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label = 1\n",
-    "angle = get_in(\n",
-    "    \"label_{}.find_trench_lines.hough_2.angle\".format(label).split(\".\"), diag\n",
-    ")\n",
-    "pitch = get_in(\n",
-    "    \"label_{}.find_trench_lines.hough_2.pitch\".format(label).split(\".\"), diag\n",
-    ")\n",
-    "offset = get_in(\n",
-    "    \"label_{}.find_trench_lines.hough_2.offset\".format(label).split(\".\"), diag\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# theta = np.pi/2 - np.pi/3\n",
-    "theta = np.deg2rad(angle)\n",
-    "# pitch = 240\n",
-    "##########\n",
-    "# anchors\n",
-    "x_min = y_min = 0\n",
-    "x_max, y_max = frame.shape\n",
-    "x_lim = (x_min, x_max)\n",
-    "y_lim = (y_min, y_max)\n",
-    "# anchor0, anchor1 = trench_detection.core.get_edge_points(np.pi/2-theta, x_lim, y_lim)\n",
-    "# anchors = np.ones(2)[np.newaxis,:] * np.arange(0,x_max,pitch)[:,np.newaxis]\n",
-    "plt.figure(figsize=(40, 40))\n",
-    "plt.imshow(frame_rot)\n",
-    "# rhos = (np.arange(0, x_max, pitch) + offset) / np.cos(theta)\n",
-    "# rhos = (np.arange(0, x_max, pitch) + (pitch/2-offset))[1:-1]\n",
-    "# rhos = (np.arange(0, x_max, pitch) + ((x_max % pitch)-offset))[1:-1]\n",
-    "# effective_offset = (x_max * np.sqrt(2)) % pitch - offset\n",
-    "max_dist = int(np.ceil(np.sqrt(x_max**2 + y_max**2)))\n",
-    "if angle < 0:\n",
-    "    # effective_offset = (np.floor(x_max*np.cos(theta)) % pitch) - offset#((-2897*2) % pitch)# + offset\n",
-    "    effective_offset = (x_max * np.cos(theta) % pitch) - offset\n",
-    "else:\n",
-    "    effective_offset = ((max_dist * 2) % pitch) + offset\n",
-    "# rhos = (np.arange(0, -x_max/np.sin(theta), pitch) + effective_offset)[1:-1]\n",
-    "delta = (y_max - x_max * np.tan(abs_theta)) * np.sin(abs_theta)\n",
-    "rhos = (np.arange(0, x_max / np.cos(theta) + delta, pitch) + effective_offset)[1:-1]\n",
-    "for rho in rhos:\n",
-    "    x = rho * np.array((np.cos(theta), np.sin(theta)))\n",
-    "    if theta < 0:\n",
-    "        x = np.array((x_max, 0)) - x  # + np.array((-1,1)) * x\n",
-    "    y0 = trench_detection.core.edge_point(x, np.pi / 2 - theta, x_lim, y_lim)\n",
-    "    y1 = trench_detection.core.edge_point(x, np.pi * 3 / 2 - theta, x_lim, y_lim)\n",
-    "    plt.gca().add_artist(plt.Circle(x, 5, color=\"c\"))\n",
-    "    plt.gca().add_artist(plt.Circle(y0, 20, color=\"g\"))\n",
-    "    plt.gca().add_artist(plt.Circle(y1, 20, color=\"r\"))\n",
-    "    # print(y1)\n",
-    "    plt.plot(*np.vstack((y0, y1)).T, color=\"w\")\n",
-    "# plt.gca().add_artist(plt.Circle(anchors[0], 50, color='g'))\n",
-    "# plt.gca().add_artist(plt.Circle(anchors[-1], 50, color='gray'))\n",
-    "# lines = trench_detection.core.line_array(anchors, theta, x_lim, y_lim, bidirectional=True)\n",
-    "# for x_m, x0, x1 in lines:\n",
-    "#     line = np.vstack((x0, x1)).T\n",
-    "#     plt.plot(*line, color='w')\n",
-    "#     plt.gca().add_artist(plt.Circle(x0, 10, color='r', zorder=2))\n",
-    "#     plt.gca().add_artist(plt.Circle(x1, 10, color='r', zorder=2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "abs_theta = np.abs(theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_max"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_max * np.tan(abs_theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_max - x_max * np.tan(abs_theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "-(x_max - x_max * np.tan(theta)) * np.sin(theta)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = np.vstack((np.arange(10), 9 - np.arange(10)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.random.random((10, 10))[a[0], a[1]]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Periodogram"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = get_in(\n",
-    "    \"label_1.trench_anchors.trench_anchor_profile\".split(\".\"), diag\n",
-    ").Curve.I.data[:, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f, Pxx = scipy.signal.periodogram(y, scaling=\"spectrum\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(f, Pxx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx = Pxx.argmax()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f[idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "period = 1 / f[idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "period"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offsets = np.linspace(0, period, 200, endpoint=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offset_idxs = (np.arange(0, len(y), period) + offsets[:, np.newaxis]).astype(np.int_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offset_idxs.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(y[offset_idxs].sum(axis=1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "diag[\"label_1\"][\"trench_rotation\"][\"hough_2\"].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = get_in(\"label_1.trench_rotation.hough_2.log_hough\".split(\".\"), diag).data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z2 = z[:, z.shape[1] // 2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(np.trim_zeros(z2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f2, Pxx2 = scipy.signal.periodogram(np.trim_zeros(z2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hv.Curve(zip(f2, Pxx2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idx2 = Pxx2.argmax()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1 / f2[idx2]"
+    "ui.show_plot_browser(diag2)\n",
+    "# ui.show_plot_browser(diag2, 'label_1.find_trench_ends');"
    ]
   },
   {
