--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180708 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180708 Trench detection.ipynb
@@ -70,7 +70,8 @@
     "# from trench_segmentation.watershed import *\n",
     "# from util import *\n",
     "# from ui import *\n",
-    "import common, trench_detection, util, ui, diagnostics, metadata, workflow, image"
+    "import common, trench_detection, util, ui, diagnostics, metadata, workflow, image\n",
+    "import trench_detection.hough, trench_detection.core"
    ]
   },
   {
@@ -129,7 +130,7 @@
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # interface='ib0',\n",
-    "    memory=\"32GB\",\n",
+    "    memory=\"16GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    threads=1,\n",
     "    processes=1,\n",
@@ -242,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames_to_process = all_frames.loc[IDX[:, :, [\"MCHERRY\"], 0], :]"
+    "frames_to_process = all_frames.loc[IDX[:, :5, [\"MCHERRY\"], 0], :]"
    ]
   },
   {
@@ -349,10 +350,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "find_trenches_diag = diagnostics.wrap_diagnostics(\n",
+    "    trench_detection.hough.find_trenches, ignore_exceptions=True, pandas=True\n",
+    ")\n",
     "trench_info_futures = {\n",
     "    idx: client.submit(\n",
-    "        trench_detection.get_trenches_diag,\n",
-    "        client.submit(workflow.get_nd2_frame, **idx._asdict()),\n",
+    "        find_trenches_diag, client.submit(workflow.get_nd2_frame, **idx._asdict())\n",
     "    )\n",
     "    for idx, row in util.iter_index(frames_to_process)\n",
     "}"
@@ -393,7 +396,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{k: v[2] for k, v in trench_info.items() if v[2] is not None}"
+    "errs = {k: v[2] for k, v in trench_info.items() if v[2] is not None}\n",
+    "errs"
    ]
   },
   {
@@ -579,6 +583,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
+    "frame = workflow.get_nd2_frame(**list(errs.keys())[0]._asdict())\n",
+    "frame_rot = frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "frame_rot = skimage.transform.rotate(frame, -37)"
    ]
   },
@@ -588,7 +603,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, diag2, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(\n",
+    "frame.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_detection.hough.find_periodic_lines(np.random.random((2000, 100)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(\n",
     "    frame_rot\n",
     ")"
    ]
@@ -599,8 +632,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag2)\n",
-    "# ui.show_plot_browser(diag2, 'label_1.find_trench_ends');"
+    "ui.show_plot_browser(diag)\n",
+    "# ui.show_plot_browser(diag, 'label_1.find_trench_ends');"
    ]
   },
   {
@@ -701,163 +734,6 @@
    "outputs": [],
    "source": [
     "plt.plot(image.radial_profile(frame1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Image processing prototyping"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reload(trench_detection)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "_, diag2, _ = diagnostics.wrap_diagnostics(trench_detection.get_trenches)(\n",
-    "    workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_plot_browser(diag2, \"labeling\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = get_in(\"labeling.components\".split(\".\"), diag)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "b = skimage.morphology.label(a.data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Lines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geometry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_lim, y_lim = geometry.get_image_limits(frame.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x0 = (x_lim[0], y_lim[0])\n",
-    "x1 = (x_lim[1], y_lim[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(*zip(x0, x1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "theta = np.pi / 2\n",
-    "sep = 1 / np.cos(np.pi / 4 - theta)\n",
-    "diagonal = np.sqrt(x_lim[1] ** 2 + y_lim[1] ** 2)\n",
-    "s = np.arange(0, diagonal, sep)[np.newaxis, :]\n",
-    "anchors = (np.array((0, 0)) * (1 - s) + s * np.array((x_lim[1], y_lim[1]))).T\n",
-    "# anchors = [(1000,1000)]\n",
-    "for x0, x_m, x1 in trench_detection.core.line_array(\n",
-    "    anchors, theta, x_lim, y_lim, bidirectional=True\n",
-    "):\n",
-    "    plt.plot(*zip(x0, x1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "theta = np.pi / 2 - np.pi / 3\n",
-    "pitch = 24\n",
-    "##########\n",
-    "# anchors\n",
-    "x_min = y_min = 0\n",
-    "x_max, y_max = frame.shape\n",
-    "x_lim = (x_min, x_max)\n",
-    "y_lim = (y_min, y_max)\n",
-    "# anchor0, anchor1 = trench_detection.core.get_edge_points(np.pi/2-theta, x_lim, y_lim)\n",
-    "anchors = np.ones(2)[np.newaxis, :] * np.arange(0, x_max, pitch)[:, np.newaxis]\n",
-    "plt.figure(figsize=(12, 12))\n",
-    "plt.imshow(frame)\n",
-    "plt.gca().add_artist(plt.Circle(anchors[0], 50, color=\"g\"))\n",
-    "plt.gca().add_artist(plt.Circle(anchors[-1], 50, color=\"gray\"))\n",
-    "# lines = line_array(point_linspace(anchor0, anchor1, int((anchor1[0] - anchor0[0])//spacing)), theta, x_lim, y_lim, start=500, stop=700)\n",
-    "lines = trench_detection.core.line_array(\n",
-    "    anchors, theta, x_lim, y_lim, bidirectional=True\n",
-    ")\n",
-    "for x_m, x0, x1 in lines:\n",
-    "    line = np.vstack((x0, x1)).T\n",
-    "    plt.plot(*line, color=\"w\")\n",
-    "    plt.gca().add_artist(plt.Circle(x0, 10, color=\"r\", zorder=2))\n",
-    "    plt.gca().add_artist(plt.Circle(x1, 10, color=\"r\", zorder=2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lines = trench_detection.core.line_array()"
    ]
   },
   {
