New trench detection is working. Testing shows it is extremely robust, only fails on badly out-of-focus frames or frames with debris or very poor loading.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180710 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180710 Trench detection.ipynb
@@ -243,7 +243,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames_to_process = all_frames.loc[IDX[:, :5, [\"MCHERRY\"], 0], :]"
+    "frames_to_process = all_frames.loc[IDX[:, :, [\"MCHERRY\"], 0], :]"
    ]
   },
   {
@@ -376,6 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "trench_info = util.apply_map_futures(\n",
     "    client.gather, trench_info_futures, predicate=lambda x: x.status == \"finished\"\n",
     ")"
@@ -406,6 +407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "trench_points, trench_diag, trench_err = workflow.unzip_trench_info(trench_info)"
    ]
   },
@@ -424,7 +426,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%store -r trench_diag"
+    "%store trench_points\n",
+    "%store trench_diag"
    ]
   },
   {
@@ -449,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bad_angle = trench_diag[\"trench_rotation.hough_2.angle\"].abs() > 2\n",
+    "bad_angle = trench_diag[\"find_trench_lines.hough_2.angle\"].abs() > 2\n",
     "bad_angle.sum()"
    ]
   },
@@ -459,8 +462,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bad_period = (trench_diag[\"trench_anchors.periodogram_2.period\"] - 24).abs() > 2\n",
-    "bad_period.sum()"
+    "bad_pitch = (trench_diag[\"find_trench_lines.hough_2.pitch\"] - 24).abs() > 1\n",
+    "bad_pitch.sum()"
    ]
   },
   {
@@ -469,7 +472,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected = trench_diag[bad_period]  # trench_diag[bad_angle | bad_period]"
+    "plt.hist(trench_diag[\"find_trench_lines.hough_2.angle\"], bins=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(trench_diag[\"find_trench_lines.hough_2.pitch\"], bins=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected = trench_diag[bad_pitch]  # trench_diag[bad_angle | bad_period]"
    ]
   },
   {
@@ -565,7 +586,47 @@
    "source": [
     "%%time\n",
     "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
+    "# frame = workflow.get_nd2_frame(filename='/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2', position=0, channel='MCHERRY', t=0)\n",
     "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_rot = skimage.transform.rotate(frame, 17)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(\n",
+    "    frame_rot\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.show_plot_browser(diag, \"label_1.find_trench_ends\")\n",
+    "ui.show_plot_browser(diag, \"label_2.find_trench_ends\")"
    ]
   },
   {
