multi_join now returns a pandas Series if the right object to join was a Series. Figured out how to get fast subselection of trenches based on a boolean index of frames.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180710 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180710 Trench detection.ipynb
@@ -36,7 +36,7 @@
     "import nd2reader\n",
     "from importlib import reload\n",
     "import traceback\n",
-    "import holoplot.pandas\n",
+    "import hvplot.pandas\n",
     "import param\n",
     "import parambokeh\n",
     "from traitlets import All\n",
@@ -70,7 +70,9 @@
     "# from trench_segmentation.watershed import *\n",
     "# from util import *\n",
     "# from ui import *\n",
-    "import common, trench_detection, util, ui, diagnostics, metadata, workflow, image\n",
+    "import common, trench_detection, util\n",
+    "import ui, diagnostics, metadata\n",
+    "import workflow, image, geometry\n",
     "import trench_detection.hough, trench_detection.core"
    ]
   },
@@ -126,13 +128,13 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"5:00:00\",\n",
+    "    walltime=\"2:00:00\",\n",
     "    # job_extra=['-p transfer'],\n",
     "    # job_extra=['--cores-per-socket=8'],\n",
     "    # interface='ib0',\n",
     "    memory=\"16GB\",\n",
     "    local_directory=\"/tmp\",\n",
-    "    threads=1,\n",
+    "    cores=1,\n",
     "    processes=1,\n",
     "    # diagnostics_port=('127.0.0.1', 8787),\n",
     "    env_extra=['export PYTHONPATH=\"/home/jqs1/projects/matriarch\"'],\n",
@@ -243,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames_to_process = all_frames.loc[IDX[:, :, [\"MCHERRY\"], 0], :]"
+    "frames_to_process = all_frames.loc[IDX[:, :, [\"MCHERRY\"], :10], :]"
    ]
   },
   {
@@ -426,6 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "%store trench_points\n",
     "%store trench_diag"
    ]
@@ -472,25 +475,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(trench_diag[\"find_trench_lines.hough_2.angle\"], bins=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.hist(trench_diag[\"find_trench_lines.hough_2.pitch\"], bins=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "selected = trench_diag[bad_pitch]  # trench_diag[bad_angle | bad_period]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_pitch.to_frame().join(trench_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_pitch.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trench_points_good = trench_points[~util.multi_join(trench_points.index, bad_pitch)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_points_good.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(len(trench_points_good), len(trench_points_good) / len(trench_points))"
    ]
   },
   {
@@ -506,7 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prototyping"
+    "# Trench finding QA"
    ]
   },
   {
@@ -523,6 +554,15 @@
     "box = ui.dataframe_browser(frame_stream)\n",
     "frame_stream.event()\n",
     "box"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ui.image_viewer(frame_stream)"
    ]
   },
   {
@@ -550,40 +590,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.image_viewer(frame_stream)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from importlib import reload\n",
-    "\n",
-    "reload(image)\n",
-    "reload(workflow)\n",
-    "reload(trench_detection)\n",
-    "reload(diagnostics)\n",
-    "reload(trench_detection.hough)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import trench_detection\n",
-    "import trench_detection.hough"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
     "# frame = workflow.get_nd2_frame(filename='/n/scratch2/jqs1/fidelity/all/TrErr002_Exp.nd2', position=0, channel='MCHERRY', t=0)\n",
@@ -600,212 +606,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_rot = skimage.transform.rotate(frame, 17)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(\n",
-    "    frame_rot\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_plot_browser(diag, \"label_1.find_trench_ends\")\n",
-    "ui.show_plot_browser(diag, \"label_2.find_trench_ends\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_detection.core.edge_point(np.array((1, 0)), np.pi * 2, (0, 1), (0, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# frame = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
-    "frame = workflow.get_nd2_frame(**list(errs.keys())[0]._asdict())\n",
-    "frame_rot = frame"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_rot = skimage.transform.rotate(frame, -37)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_rot_cropped = frame_rot[:1906, :1906]\n",
-    "frame_rot_cropped2 = frame_rot[:1900, :1900]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_rot.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h, theta, rho = image.hough_line_intensity(frame_rot)\n",
-    "h2, theta2, rho2 = image.hough_line_intensity(frame_rot_cropped)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h2.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(h[:5392] - h2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow((h[:5392] - h2), aspect=0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = h.shape[0] - h2.shape[0]\n",
-    "plt.imshow((h[l // 2 : -l // 2] - h2), aspect=0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(np.log(h), aspect=0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(np.log(h2[:, 100:120]), aspect=0.01)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "((1906 - 2048)) % 24.225108225108222"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2048 * np.sqrt(2) % 24.288"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.hough.find_trenches)(\n",
-    "    frame_rot\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ui.show_plot_browser(diag);\n",
-    "ui.show_plot_browser(diag, \"label_1\")\n",
-    "# ui.show_plot_browser(diag, 'label_1.find_trench_ends');\n",
-    "# ui.show_plot_browser(diag, 'label_2.find_trench_ends');"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Low-frequency components"
+    "# Segmentation"
    ]
   },
   {
@@ -814,7 +618,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "frame1 = workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))"
+    "trench_points.index.names"
    ]
   },
   {
@@ -823,7 +627,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(frame1)"
+    "trenches = trench_points.loc[\n",
+    "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\", :3, [\"MCHERRY\"], 0, :, :],\n",
+    "    :,\n",
+    "]"
    ]
   },
   {
@@ -832,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reload(image)"
+    "trenches.head()"
    ]
   },
   {
@@ -841,8 +648,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def psd2(img):\n",
-    "    return np.abs(np.fft.fftshift(np.fft.fft2(img))) ** 2"
+    "trenches.tail()"
    ]
   },
   {
@@ -851,8 +657,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = psd2(frame1)\n",
-    "b = a / a.mean()"
+    "trench_set_points = (\n",
+    "    np.array(list(trenches.loc[:, \"bottom\"].values)),\n",
+    "    np.array(list(trenches.loc[:, \"top\"].values)),\n",
+    ")"
    ]
   },
   {
@@ -861,7 +669,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(image.radial_profile(np.log(psd2(frame1))))"
+    "frame = workflow.get_nd2_frame(**trenches.index.to_frame().iloc[0].to_dict())"
    ]
   },
   {
@@ -870,8 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(np.log(image.radial_profile(psd2(frame1))))\n",
-    "plt.plot(np.log(image.radial_profile(psd2(frame2))))"
+    "x_lim, y_lim = geometry.get_image_limits(frame.shape)"
    ]
   },
   {
@@ -880,7 +687,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(np.log(b))"
+    "geometry.get_trench_bbox(trench_set_points, 0, x_lim, y_lim)"
    ]
   },
   {
@@ -889,16 +696,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(psd2(frame1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(image.radial_profile(frame1))"
+    "for x in trenches.groupby([\"filename\", \"position\", \"trench_set\"]):\n",
+    "    print(x)"
    ]
   },
   {
