iter_index now iterates over pandas GroupBy objects.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180710 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180710 Trench detection.ipynb
@@ -484,24 +484,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bad_pitch.to_frame().join(trench_points)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bad_pitch.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "trench_points_good = trench_points[~util.multi_join(trench_points.index, bad_pitch)]"
    ]
@@ -627,28 +609,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trenches = trench_points.loc[\n",
+    "trenches = trench_points_good.loc[\n",
     "    IDX[\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\", :3, [\"MCHERRY\"], 0, :, :],\n",
     "    :,\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trenches.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trenches.tail()"
    ]
   },
   {
@@ -686,8 +650,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "geometry.get_trench_bbox(trench_set_points, 0, x_lim, y_lim)"
+    "a.keys"
    ]
   },
   {
@@ -696,8 +667,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in trenches.groupby([\"filename\", \"position\", \"trench_set\"]):\n",
-    "    print(x)"
+    "for idx, df in util.iter_index(\n",
+    "    trenches.groupby([\"filename\", \"position\", \"channel\", \"t\", \"trench_set\"])\n",
+    "):\n",
+    "    # print(df.index.droplevel(['trench_set', 'trench']))\n",
+    "    frame = workflow.get_nd2_frame(**idx._asdict())\n",
+    "    print(df[\"top\"].values.shape)\n",
+    "    top_points = df[\"top\"].values\n",
+    "    bottom_points = df[\"bottom\"].values\n",
+    "    num_trenches = len(df)\n",
+    "    for trench_idx in range(num_trenches):\n",
+    "        pass"
    ]
   },
   {
