First cut of get_trench_thumbs/get_trench_stacks.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180710 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180710 Trench detection.ipynb
@@ -41,7 +41,7 @@
     "import parambokeh\n",
     "from traitlets import All\n",
     "import cachetools\n",
-    "from collections import namedtuple\n",
+    "from collections import namedtuple, defaultdict\n",
     "import skimage.morphology\n",
     "import scipy\n",
     "\n",
@@ -667,17 +667,184 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx, df in util.iter_index(\n",
-    "    trenches.groupby([\"filename\", \"position\", \"channel\", \"t\", \"trench_set\"])\n",
+    "def get_trench_thumbs(trenches, get_frame_func=workflow.get_nd2_frame):\n",
+    "    trench_thumbs = {}\n",
+    "    for idx, group in util.iter_index(\n",
+    "        trenches.groupby([\"filename\", \"position\", \"channel\", \"t\", \"trench_set\"])\n",
+    "    ):\n",
+    "        frame = get_frame_func(**idx._asdict())\n",
+    "        top_points = group[\"top\"].values\n",
+    "        bottom_points = group[\"bottom\"].values\n",
+    "        for trench_idx, _ in util.iter_index(group):\n",
+    "            ul, lr = geometry.get_trench_bbox(\n",
+    "                (top_points, bottom_points), trench_idx.trench, x_lim, y_lim\n",
+    "            )\n",
+    "            trench_thumbs[trench_idx] = frame[ul[1] : lr[1], ul[0] : lr[0]]\n",
+    "    return trench_thumbs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_trench_stacks(\n",
+    "    trenches, frames, get_frame_func=workflow.get_nd2_frame, transformation=np.array\n",
     "):\n",
-    "    # print(df.index.droplevel(['trench_set', 'trench']))\n",
-    "    frame = workflow.get_nd2_frame(**idx._asdict())\n",
-    "    print(df[\"top\"].values.shape)\n",
-    "    top_points = df[\"top\"].values\n",
-    "    bottom_points = df[\"bottom\"].values\n",
-    "    num_trenches = len(df)\n",
-    "    for trench_idx in range(num_trenches):\n",
-    "        pass"
+    "    trench_stacks = defaultdict(list)\n",
+    "    for framestack_idx, framestack_group in util.iter_index(\n",
+    "        trenches.groupby([\"filename\", \"position\", \"channel\"])\n",
+    "    ):\n",
+    "        # t_group_iterator = util.iter_index(framestack_group.groupby(['t', 'trench_set']))\n",
+    "        current_trenches = next(iter(framestack_group.groupby(\"t\")))[1][:7]\n",
+    "        for t in frames.loc[IDX[framestack_idx]].reset_index()[\"t\"]:\n",
+    "            frame_idx = {\"t\": t, **framestack_idx._asdict()}\n",
+    "            frame = get_frame_func(**frame_idx)\n",
+    "            for trench_idx, _ in util.iter_index(current_trenches.index.droplevel(\"t\")):\n",
+    "                ul, lr = geometry.get_trench_bbox(\n",
+    "                    (top_points, bottom_points), trench_idx.trench, x_lim, y_lim\n",
+    "                )\n",
+    "                trench_stacks[trench_idx].append(frame[ul[1] : lr[1], ul[0] : lr[0]])\n",
+    "    if transformation is not None:\n",
+    "        trench_stacks = {k: transformation(v) for k, v in trench_stacks.items()}\n",
+    "    else:\n",
+    "        trench_stacks = dict(trench_stacks)  # convert back from a defaultdict\n",
+    "    return trench_stacks\n",
+    "\n",
+    "\n",
+    "get_trench_stacks(trenches, all_frames, transformation=lambda x: np.array(x).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_idx, df = next(iter(trenches.groupby([\"filename\", \"position\", \"channel\"])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby(\"t\").last()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_row = df.reset_index().iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_frames.index.names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = all_frames.loc[IDX[df_idx]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = df.loc[IDX[df_idx]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = b.copy()\n",
+    "c.index = c.index.droplevel(\"trench_set\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc = c.loc[IDX[0, 0]]  # .head()['top']\n",
+    "cc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aa = a.index.to_frame(index=False).head()\n",
+    "aa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.merge_asof(aa, cc, on=\"t\", by=\"trench\")  # .set_index(['t'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.merge_asof(\n",
+    "    a.index.to_frame(index=False), c.reset_index(), on=\"t\"\n",
+    ")  # .set_index(['t'])"
    ]
   },
   {
